lesson 3 - base of js
array was added and function for search was written

--- a/styles/index.css
+++ b/styles/index.css
@@ -281,6 +281,10 @@ body {
     line-height: 16px;
 }
 
+.search {
+    display: flex;
+}
+
 .content-product {
     display: flex;
     flex-grow: 1;
